Updates to notebook and app

--- a/Tweets_Four_Emotions_Classification.ipynb
+++ b/Tweets_Four_Emotions_Classification.ipynb
@@ -47,15 +47,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "j5-M1dHEwVPC",
-        "outputId": "1a8cda43-d8a3-43a0-a9d5-867cb6084693"
+        "outputId": "f47da936-59c7-40c7-cd23-04f33ee1ddf0"
       },
-      "execution_count": 61,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
+            "Mounted at /content/drive\n"
           ]
         }
       ]
@@ -75,7 +75,7 @@
       "metadata": {
         "id": "lSRR9hNau4ct"
       },
-      "execution_count": 62,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -86,8 +86,333 @@
       "metadata": {
         "id": "bDafAkmpvD0M"
       },
-      "execution_count": 63,
+      "execution_count": 3,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "data.head(10)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 363
+        },
+        "id": "MmmM4AckkheF",
+        "outputId": "5aa5bb8b-4e74-4267-cf5e-9aa8242cac67"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "                                                     text emotions\n",
+              "27383   i feel awful about it too because it s my job ...  sadness\n",
+              "110083                              im alone i feel awful  sadness\n",
+              "140764  ive probably mentioned this before but i reall...      joy\n",
+              "100071           i was feeling a little low few days back  sadness\n",
+              "2837    i beleive that i am much more sensitive to oth...     love\n",
+              "18231   i find myself frustrated with christians becau...     love\n",
+              "10714   i am one of those people who feels like going ...      joy\n",
+              "35177   i feel especially pleased about this as this h...      joy\n",
+              "122177  i was struggling with these awful feelings and...      joy\n",
+              "26723     i feel so enraged but helpless at the same time    anger"
+            ],
+            "text/html": [
+              "\n",
+              "  <div id=\"df-4562c056-3c34-488e-87ad-ac84e1c1b70d\" class=\"colab-df-container\">\n",
+              "    <div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>text</th>\n",
+              "      <th>emotions</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>27383</th>\n",
+              "      <td>i feel awful about it too because it s my job ...</td>\n",
+              "      <td>sadness</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>110083</th>\n",
+              "      <td>im alone i feel awful</td>\n",
+              "      <td>sadness</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>140764</th>\n",
+              "      <td>ive probably mentioned this before but i reall...</td>\n",
+              "      <td>joy</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>100071</th>\n",
+              "      <td>i was feeling a little low few days back</td>\n",
+              "      <td>sadness</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2837</th>\n",
+              "      <td>i beleive that i am much more sensitive to oth...</td>\n",
+              "      <td>love</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>18231</th>\n",
+              "      <td>i find myself frustrated with christians becau...</td>\n",
+              "      <td>love</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>10714</th>\n",
+              "      <td>i am one of those people who feels like going ...</td>\n",
+              "      <td>joy</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>35177</th>\n",
+              "      <td>i feel especially pleased about this as this h...</td>\n",
+              "      <td>joy</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>122177</th>\n",
+              "      <td>i was struggling with these awful feelings and...</td>\n",
+              "      <td>joy</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>26723</th>\n",
+              "      <td>i feel so enraged but helpless at the same time</td>\n",
+              "      <td>anger</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>\n",
+              "    <div class=\"colab-df-buttons\">\n",
+              "\n",
+              "  <div class=\"colab-df-container\">\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-4562c056-3c34-488e-87ad-ac84e1c1b70d')\"\n",
+              "            title=\"Convert this dataframe to an interactive table.\"\n",
+              "            style=\"display:none;\">\n",
+              "\n",
+              "  <svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\" viewBox=\"0 -960 960 960\">\n",
+              "    <path d=\"M120-120v-720h720v720H120Zm60-500h600v-160H180v160Zm220 220h160v-160H400v160Zm0 220h160v-160H400v160ZM180-400h160v-160H180v160Zm440 0h160v-160H620v160ZM180-180h160v-160H180v160Zm440 0h160v-160H620v160Z\"/>\n",
+              "  </svg>\n",
+              "    </button>\n",
+              "\n",
+              "  <style>\n",
+              "    .colab-df-container {\n",
+              "      display:flex;\n",
+              "      gap: 12px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert {\n",
+              "      background-color: #E8F0FE;\n",
+              "      border: none;\n",
+              "      border-radius: 50%;\n",
+              "      cursor: pointer;\n",
+              "      display: none;\n",
+              "      fill: #1967D2;\n",
+              "      height: 32px;\n",
+              "      padding: 0 0 0 0;\n",
+              "      width: 32px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert:hover {\n",
+              "      background-color: #E2EBFA;\n",
+              "      box-shadow: 0px 1px 2px rgba(60, 64, 67, 0.3), 0px 1px 3px 1px rgba(60, 64, 67, 0.15);\n",
+              "      fill: #174EA6;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-buttons div {\n",
+              "      margin-bottom: 4px;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert {\n",
+              "      background-color: #3B4455;\n",
+              "      fill: #D2E3FC;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert:hover {\n",
+              "      background-color: #434B5C;\n",
+              "      box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.15);\n",
+              "      filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.3));\n",
+              "      fill: #FFFFFF;\n",
+              "    }\n",
+              "  </style>\n",
+              "\n",
+              "    <script>\n",
+              "      const buttonEl =\n",
+              "        document.querySelector('#df-4562c056-3c34-488e-87ad-ac84e1c1b70d button.colab-df-convert');\n",
+              "      buttonEl.style.display =\n",
+              "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
+              "\n",
+              "      async function convertToInteractive(key) {\n",
+              "        const element = document.querySelector('#df-4562c056-3c34-488e-87ad-ac84e1c1b70d');\n",
+              "        const dataTable =\n",
+              "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
+              "                                                    [key], {});\n",
+              "        if (!dataTable) return;\n",
+              "\n",
+              "        const docLinkHtml = 'Like what you see? Visit the ' +\n",
+              "          '<a target=\"_blank\" href=https://colab.research.google.com/notebooks/data_table.ipynb>data table notebook</a>'\n",
+              "          + ' to learn more about interactive tables.';\n",
+              "        element.innerHTML = '';\n",
+              "        dataTable['output_type'] = 'display_data';\n",
+              "        await google.colab.output.renderOutput(dataTable, element);\n",
+              "        const docLink = document.createElement('div');\n",
+              "        docLink.innerHTML = docLinkHtml;\n",
+              "        element.appendChild(docLink);\n",
+              "      }\n",
+              "    </script>\n",
+              "  </div>\n",
+              "\n",
+              "\n",
+              "<div id=\"df-e6e7843c-7824-47c2-8dff-cdacba642da2\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-e6e7843c-7824-47c2-8dff-cdacba642da2')\"\n",
+              "            title=\"Suggest charts\"\n",
+              "            style=\"display:none;\">\n",
+              "\n",
+              "<svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\"viewBox=\"0 0 24 24\"\n",
+              "     width=\"24px\">\n",
+              "    <g>\n",
+              "        <path d=\"M19 3H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zM9 17H7v-7h2v7zm4 0h-2V7h2v10zm4 0h-2v-4h2v4z\"/>\n",
+              "    </g>\n",
+              "</svg>\n",
+              "  </button>\n",
+              "\n",
+              "<style>\n",
+              "  .colab-df-quickchart {\n",
+              "      --bg-color: #E8F0FE;\n",
+              "      --fill-color: #1967D2;\n",
+              "      --hover-bg-color: #E2EBFA;\n",
+              "      --hover-fill-color: #174EA6;\n",
+              "      --disabled-fill-color: #AAA;\n",
+              "      --disabled-bg-color: #DDD;\n",
+              "  }\n",
+              "\n",
+              "  [theme=dark] .colab-df-quickchart {\n",
+              "      --bg-color: #3B4455;\n",
+              "      --fill-color: #D2E3FC;\n",
+              "      --hover-bg-color: #434B5C;\n",
+              "      --hover-fill-color: #FFFFFF;\n",
+              "      --disabled-bg-color: #3B4455;\n",
+              "      --disabled-fill-color: #666;\n",
+              "  }\n",
+              "\n",
+              "  .colab-df-quickchart {\n",
+              "    background-color: var(--bg-color);\n",
+              "    border: none;\n",
+              "    border-radius: 50%;\n",
+              "    cursor: pointer;\n",
+              "    display: none;\n",
+              "    fill: var(--fill-color);\n",
+              "    height: 32px;\n",
+              "    padding: 0;\n",
+              "    width: 32px;\n",
+              "  }\n",
+              "\n",
+              "  .colab-df-quickchart:hover {\n",
+              "    background-color: var(--hover-bg-color);\n",
+              "    box-shadow: 0 1px 2px rgba(60, 64, 67, 0.3), 0 1px 3px 1px rgba(60, 64, 67, 0.15);\n",
+              "    fill: var(--button-hover-fill-color);\n",
+              "  }\n",
+              "\n",
+              "  .colab-df-quickchart-complete:disabled,\n",
+              "  .colab-df-quickchart-complete:disabled:hover {\n",
+              "    background-color: var(--disabled-bg-color);\n",
+              "    fill: var(--disabled-fill-color);\n",
+              "    box-shadow: none;\n",
+              "  }\n",
+              "\n",
+              "  .colab-df-spinner {\n",
+              "    border: 2px solid var(--fill-color);\n",
+              "    border-color: transparent;\n",
+              "    border-bottom-color: var(--fill-color);\n",
+              "    animation:\n",
+              "      spin 1s steps(1) infinite;\n",
+              "  }\n",
+              "\n",
+              "  @keyframes spin {\n",
+              "    0% {\n",
+              "      border-color: transparent;\n",
+              "      border-bottom-color: var(--fill-color);\n",
+              "      border-left-color: var(--fill-color);\n",
+              "    }\n",
+              "    20% {\n",
+              "      border-color: transparent;\n",
+              "      border-left-color: var(--fill-color);\n",
+              "      border-top-color: var(--fill-color);\n",
+              "    }\n",
+              "    30% {\n",
+              "      border-color: transparent;\n",
+              "      border-left-color: var(--fill-color);\n",
+              "      border-top-color: var(--fill-color);\n",
+              "      border-right-color: var(--fill-color);\n",
+              "    }\n",
+              "    40% {\n",
+              "      border-color: transparent;\n",
+              "      border-right-color: var(--fill-color);\n",
+              "      border-top-color: var(--fill-color);\n",
+              "    }\n",
+              "    60% {\n",
+              "      border-color: transparent;\n",
+              "      border-right-color: var(--fill-color);\n",
+              "    }\n",
+              "    80% {\n",
+              "      border-color: transparent;\n",
+              "      border-right-color: var(--fill-color);\n",
+              "      border-bottom-color: var(--fill-color);\n",
+              "    }\n",
+              "    90% {\n",
+              "      border-color: transparent;\n",
+              "      border-bottom-color: var(--fill-color);\n",
+              "    }\n",
+              "  }\n",
+              "</style>\n",
+              "\n",
+              "  <script>\n",
+              "    async function quickchart(key) {\n",
+              "      const quickchartButtonEl =\n",
+              "        document.querySelector('#' + key + ' button');\n",
+              "      quickchartButtonEl.disabled = true;  // To prevent multiple clicks.\n",
+              "      quickchartButtonEl.classList.add('colab-df-spinner');\n",
+              "      try {\n",
+              "        const charts = await google.colab.kernel.invokeFunction(\n",
+              "            'suggestCharts', [key], {});\n",
+              "      } catch (error) {\n",
+              "        console.error('Error during call to suggestCharts:', error);\n",
+              "      }\n",
+              "      quickchartButtonEl.classList.remove('colab-df-spinner');\n",
+              "      quickchartButtonEl.classList.add('colab-df-quickchart-complete');\n",
+              "    }\n",
+              "    (() => {\n",
+              "      let quickchartButtonEl =\n",
+              "        document.querySelector('#df-e6e7843c-7824-47c2-8dff-cdacba642da2 button');\n",
+              "      quickchartButtonEl.style.display =\n",
+              "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
+              "    })();\n",
+              "  </script>\n",
+              "</div>\n",
+              "    </div>\n",
+              "  </div>\n"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 5
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -271,6 +596,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# Save fitted tokenizer for later use\n",
         "import pickle\n",
         "with open(\"tokenizer.pkl\", \"wb\") as file:\n",
         "    pickle.dump(tokenizer, file)"
@@ -494,6 +820,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# convert train labels to index\n",
         "train_labels = emotions_to_ids(train.emotions)"
       ],
       "metadata": {
@@ -697,6 +1024,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# Create function for plotting learning curves\n",
         "def plot_history_metrics(history):\n",
         "    \"\"\"\n",
         "    Plot the accuracy and loss for the training and validation data\n",
@@ -734,7 +1062,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 342
+          "height": 382
         },
         "id": "jg3J55rf40m9",
         "outputId": "f6bb2251-8b78-4e3c-bb7a-ebf9a39b0416"
